--- a/package.json
+++ b/package.json
@@ -20,9 +20,13 @@
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "json": "^11.0.0",
+    "json-server": "^0.17.3",
+    "ng-angular-popup": "^0.3.1",
     "ng2-search-filter": "^0.5.1",
     "ngx-infinite-scroll": "^16.0.0",
     "ngx-pagination": "^6.0.3",
+    "ngx-toastr": "^17.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "typescript": "^4.9.5",
